# info-broker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  evaluate_finetuned.py  evaluate_grading.py  export_data.py  export_dataset.py  generate_emails.py  ingest.py  llm_providers.py  pyproject.toml  requirements.txt  research_agent.py  security.py  test_audio.py  test_episodic_memory.py  test_grading.py  test_media.py  test_no_sql_string_formatting.py  test_phases_345.py  test_security.py
app/: __init__.py  deps.py  main.py  schemas.py  schemas_media.py
app/adapters/: audio.py  jokes.py  music.py  news.py  weather.py
app/lib/: cache.py  ddg_fallback.py  rate_limit.py
app/routers/: media.py  profiles.py  research.py  search.py
app/search_engine/: auth.py  db.py  domain_tiers.py  executor.py  feedback.py  grading.py  qdrant.py  router.py  schemas.py
app/search_engine/plugins/: __init__.py  base.py  ddg.py
app/tests/: test_playlist_source.py  test_r2_helpers.py
data/: fallback_jokes.json  fallback_news.json
docs/: README.md  agents-and-prompts.md  architecture-and-agents.md  data-model.md  fine-tuning.md  getting-started.md  lessons-learned.md  operations.md  optimization-strategy.md  testing.md
docs/superpowers/plans/: 2026-04-12-osint-search-engine-mvp.md
docs/superpowers/specs/: 2026-04-12-osint-search-engine-design.md
tasks/: agent-collab.md  todo.md
tests/: test_api.py  test_search_engine.py
